--- a/styles.css
+++ b/styles.css
@@ -111,23 +111,620 @@ header ul li:hover {
     justify-content: center; /* Align items horizontally */
     align-items: center; /* Align items vertically */
     max-width: 80%;
+    transform: translate(12.5%);
 }
 
 .drinks{
     display: flex;
-    background: rgba(209, 132, 132, 0.452);
+    box-shadow: 2px 2px 8px #121213;
+    background: rgba(216, 214, 214, 0.664);
     overflow: auto;
+    padding: 15px 30px;
 }
 
-.drinks .d1
-{
-    flex-direction: column; /* Arrange items vertically */
-    align-items: center; 
-    scroll-behavior: smooth;
+.menu-heading{
+    border-radius: 30px;
+        background:#333;
+        color: #fff;
+        padding: 20px 20px;
+        margin-bottom: 0px;
+        text-align: center;
+        font-weight: 600;
+       font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+}
+.menu{
+    background-color: #FFE4B5;    /*BG COLOR*/
+    border-radius: 20px;
+    
+}
+.menu-content{
     display: flex;
 }
-.drinks .d1 img{
-   height: 25vh;
-    box-shadow: 2px 2px 8px #121213;
-    margin-right: 14px;
+.container1{
+    margin-top: 20px;
+    background-color: #ffffff57;
+    max-width: 20%;
+    padding: 50px 50px;
+    border: 1px solid rgb(238, 190, 102);
+    border-radius: 10px;
+    margin-left: 20px;
+    padding-right: 70px;
+    display: flex;
+}
+.mySlides {
+    display: none;
+}
+.slideshow-container img{
+    border: 10px solid rgb(238, 190, 102);
+    border-radius: 20px;
+
+}
+.today-special h4{
+    font-style: oblique;
+    text-align: center;
+    font-family: cursive;
+   color: #e68231;
+   font-size: 40px;
+   margin-top: -10px;
+}
+.today-special h3{
+    font-style: oblique;
+    text-align: center;
+    font-family: cursive;
+   color: #c49e35;
+   font-size: 25px;
+   margin-top: -40px;  
+}
+.container2{
+    border: 1px solid rgb(238, 190, 102);
+    border-radius: 10px;
+    margin-top: 20px;
+    margin-left: 60px;
+    background-color: #ffffff57;
+    
+}
+.table-content-top{
+    display: flex;
+    
+        position: relative; /* Set position to relative */
+    
+}
+.table-content-top button{
+    margin-left: 150px;
+    max-height: 50px;
+    border: none;
+    background: none;
+    cursor: pointer;
+    color: #e68231;
+   font-size: 30px;
+   font-weight: 600;
+   font-style: oblique;
+   margin-top: 40px;
+   font-family: cursive;
+   
+}
+.table-content-top button:hover{
+border: 2px solid #856108;
+border-radius: 20px;
+transition: .2s;
+}
+.table-content-top .drink{
+    border-bottom: 2px solid #FFA500;
+}
+
+
+                                                                                                    /*was  working here*/
+.container2 .table-content-top img{
+   margin-left: 90px;
+   
+}
+
+
+
+
+.table-content-main{
+    margin-top: -430px;
+}
+
+.table-content-main .hot h1{
+ font-family: cursive;
+ margin-left: 30px;
+ font-size: 40px;
+ border-collapse: separate ;
+  border-bottom: 5px solid #FFA500; 
+ width: 20.5%;
+ }
+
+ .hot button{
+    border: none;
+    background: none;
+    cursor: pointer;
+    margin-left: 50px;
+    font-size: 20px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    
+ }
+ .hot button:hover{
+    border-bottom: 2px solid #FFA500;
+    border-bottom-left-radius: 20px;
+ }
+ .hot button p{
+    opacity: 50%;
+    font-size: 10px;
+
+ }
+  .Fruit-Juices .hot h1{
+    width: 22%;
+  }
+  .Fruit-Juices .hot h1 i{
+    margin-right: 10px;
+  }
+  .mojitos .hot h1 i{
+    margin-right: 10px;
+  }
+  .mojitos .hot h1{
+    width: 22%;
+  }
+/* Define styles for the table-content-top container */
+.table-content-top {
+    position: relative; /* Set position to relative */
+}
+
+
+/* Define styles for the "Read this" text */
+.table-content-top::before {
+    content: url('img/chef_comment_box_test3.png'); /* Set the content to the image */
+    position: absolute; /* Set position to absolute */
+    top: -9%; /* Align vertically at the middle */
+    right: calc(80% - 900px); /* Adjust the distance from the right edge */
+    transform: translateY(-10%); /* Adjust to vertically center the image */
+    min-width: 2%; /* Set the width of the image */
+    height: 1%; 
+    animation: fadeOut 2s infinite;
+}
+@keyframes fadeOut{
+    0%{opacity: 0;}
+    90%{opacity: 1;}
+    100%{opacity: 1;}
+}
+
+/* Additional styling for the image */
+.table-content-top img {
+    display: block; /* Ensure the image is displayed as a block element */
+    width: 100%; /* Set the width to fill its container */
+    height: auto; /* Maintain aspect ratio */
+}
+
+.snacks-content,.main-content{
+    border: none;
+    display: none;
+}
+
+/* Define keyframes for the animation */
+@keyframes slideIn {
+    from {
+        opacity: 0;
+        transform: translateY(-50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+/* Apply animation to the table-content-main div */
+.table-content-main {
+    animation: slideIn 0.5s ease-in-out;
+}
+.table-content-main .snacks-content {
+    animation: slideIn 0.15s ease-in-out;
+}
+.table-content-main .drinks-content {
+    animation: slideIn 0.15s ease-in-out;
+}
+
+
+                    /* Additionals*/
+.additionals button{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   margin-left: 15%;
+   background-color: rgba(111, 23, 194, 0.719);
+   color: #fff;
+   margin-top: 20px;
+   padding: 10px 20px;
+   box-shadow: 0px 0px 10px  .2px #333;
+  border-radius: 20px;
+  transition: .2s linear;
+}
+
+.child-img img:nth-child(1){
+    margin-bottom: -35px;
+    max-width: 15%;
+   /*  margin-left: 10px; */
+}
+.child-img img:nth-child(3){
+    margin-bottom: -52px;
+    max-width: 28%;
+     margin-left: -50px; 
+}
+
+ .child-img img
+ {
+    display: none;
+    max-width: 31%;
+   /*  margin-left: -30px; */
+    
+ }
+
+
+ .parent-image img{
+    z-index: 1;
+    margin-left: 30px;
+ }
+ .parent-image img:hover{
+   cursor: pointer;
+ }
+ .parent-image img:hover {
+    cursor: pointer;
+    transform: rotate(-360deg); /* Rotate 360 degrees on hover */
+    transition: transform 0.5s ease; /* Add a smooth transition effect */
+}
+
+.parent-image img {
+    z-index: 1;
+    transition: transform 0.5s ease; /* Add a smooth transition effect for hover out */
+}
+
+.parent-image img:hover {
+    transform: rotate(360deg); /* Rotate back -360 degrees on hover out */
+}
+
+.parent-image {
+    position: relative;
+}
+.parent-image button:hover{
+    opacity: 1;
+    animation:fadeOutClickMe 2s infinite ;
+}
+
+.parent-image button {
+    opacity: 0;
+    display: inline;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-799%, -50%);
+    padding: 15px 20px;
+    border-radius: 20px;
+    border: none;
+    background-color: #FFA500;
+    color: #fff;
+    cursor: pointer;
+    font-family: cursive;
+    
+}
+
+@keyframes fadeOutClickMe{
+    0%{opacity: 0.5;}
+    90%{opacity: 1;}
+    100%{opacity: 1;}
+}
+
+.child-img img {
+    position: relative; /* Set position to relative */
+    animation: slideRight 1s ease-in-out forwards; /* Apply animation */
+}
+
+@keyframes slideRight {
+    from {
+        left: -100%; /* Start position */
+    }
+    to {
+        left: 0; /* End position */
+    }
+}
+.top-burgers{
+    margin-top: 100px;
+}
+
+
+.top-burgers-parent{
+    display: flex;
+}
+
+.main-order-box {
+    display: flex;
+}
+
+.top-burgers-parent {
+    flex: 1; /* Make top-burgers-parent flexible */
+    margin-right: 20px; /* Add some spacing between the two elements */
+}
+.order-box-after-burgers {
+    flex: 1; 
+    display: flex;
+    flex-direction: column;
+    background-color: #ffe9c6;
+    border-top-left-radius: 10%;
+    justify-content: center;
+    align-items: center;    
+    margin-right: 30%;
+    margin-top: 50px;
+    border: 1px solid #FFA500;
+    min-width: 50%;  /* Increased width to 80% */
+    /* box-shadow: 0px 0px 10px .2px #333; */
+}
+
+.box input
+{
+    padding: 10px 90px 10px 10px;
+    margin-bottom: 50px;
+    border: none;
+    border-bottom:1px solid #33333352;
+}
+.order-box-upper{
+   /*  background-color: #FFA500;
+    padding: 10px 30%;
+    margin-bottom: 20px;
+    display: block; */
+   margin-top: -70%;
+}
+.small-sphere{
+    background-color: #FFA500;
+    width: 40%;
+    margin-top: 70%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    
+    padding-left: 25px;
+    font-family: cursive;
+    margin-left: 25%;
+    border-radius: 15%;
+}
+.big-sphere{ 
+    margin-top: -10px;
+    text-align: center;
+    width: 150%;
+    padding-left: 25px;
+    font-family: cursive;
+    
+    border-radius: 15%;
+    position: relative;
+    background-color: #FFA500;
+}
+
+
+.box #name{
+   padding: 7px 2px 5px 2px;
+   margin-left: -70px;
+}
+#cost{
+    display: flex;
+    margin-top: -70px;
+    margin-left: 250px;
+}
+#Drinks{
+    
+    margin-top: 30px;
+}
+.items{
+    border-radius: 0%;
+    background-color: #ffe9c6;
+    outline: navajowhite;
+}
+
+.dr, .sn, .mc{
+    width: 70%;
+}
+#selectedDrinks #reset,#submit{
+padding: 10px 30px;
+margin-left: 55px;
+font-family: cursive;
+font-size: 17px;
+box-shadow: 10px  10px #fff .5;
+
+}
+
+
+/* CSS */
+#reset {
+  --b: 3px;   /* border thickness */
+  --s: .45em; /* size of the corner */
+  --color: #373B44;
+  
+  padding: calc(.5em + var(--s)) calc(.9em + var(--s));
+  color: var(--color);
+  --_p: var(--s);
+  background:
+    conic-gradient(from 90deg at var(--b) var(--b),#0000 90deg,var(--color) 0)
+    var(--_p) var(--_p)/calc(100% - var(--b) - 2*var(--_p)) calc(100% - var(--b) - 2*var(--_p));
+  transition: .3s linear, color 0s, background-color 0s;
+  outline: var(--b) solid #0000;
+  outline-offset: .6em;
+  font-size: 16px;
+
+  border: 0;
+
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+#reset:hover,
+#reset:focus-visible{
+  --_p: 0px;
+  outline-color: var(--color);
+  outline-offset: .05em;
+}
+
+#reset:active {
+  background: var(--color);
+  color: #fff;
+}
+
+#submit {
+ /*  background-color:  rgba(255, 165, 0, 0.5, #FFA500 64.72%); */
+ background-color: #FFA500 ;
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  flex-shrink: 0;
+  font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  height: 4rem;
+  padding: 0 1.6rem;
+  text-align: center;
+  text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+  transition: all .5s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+#submit:hover {
+ /*  box-shadow: rgba(255, 165, 0, 0.5) 0 1px 30px; */
+ box-shadow: rgba(0, 0, 0, 0.5) 0 1px 30px; 
+  transition-duration: .1s;
+}
+
+@media (min-width: 768px) {
+ #submit {
+    padding: 0 2.6rem;
+  }
+}
+
+
+
+                                                                    /**
+                                                                    * POP UP
+                                                                    */
+  
+/*POP UP*/
+
+.modal {
+      display: none;  
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 200%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+  
+}
+
+.modal-content {
+    
+    margin: 12% 33%;
+    padding: 20px;
+  
+    width: 20%;
+    height: 17%;
+   transition:.5s ease-in-out;
+   /*  border: 7px solid #0D99FF; */
+ 
+    font-family:cursive;
+
+}
+.man img{
+    position: absolute;
+    z-index: 0;
+}
+   
+
+.close {
+    position: relative;
+    color: #aaa;
+   margin-left: 70%;
+    font-size: 28px;
+    font-weight: bold;
+   
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.bi-person-circle{
+    margin-top: -10px;
+    display: flex;
+    font-size: 2em;
+    margin-right: -90px;
+    margin-bottom: 10px;
+}
+.bi-person-circle p{
+   margin-top: 35px;
+    position: absolute;
+    display: flex;
+    font-size: 20px;
+}
+
+
+.modal-content input{
+    font-family:cursive;
+     outline: none; 
+   border: 3px solid #ffffff;
+   border-top: #e68231;
+   border-right: #e68231;
+   border-left:  #111;
+   margin-left: 60px;
+   display: block;
+   color: #fff;
+    margin-top: 35px;
+    font-size: 20px;
+    width: 55%;
+    background-color: #33333300;
+    
+}
+.inputdata{
+ margin-top: 5%;
+    margin-left: 10%;
+    position: absolute;
+    
+   
+}
+
+.inputdata h2{
+    margin-top: -8%;
+    margin-left: 28%;
+    color: #fff;
+}
+#submitBtn{
+    font-family: cursive;
+    margin-left: 30%;
+    margin-top: 17%;
+    font-size: 20px;
+    cursor: pointer;
+    border-radius: 15%;
+}
+#submitBtn:hover{
+    color: #fff;
+    background-color: #0D99FF;
+    transition: .3s ease-in;
+}
+.bi-person-circle p{
+    margin-left: -35px;
+}
+
+.big-sphere{
+    margin-left: -80px;
+    position: relative;
+   overflow: hidden;
+    border: 2px solid black;
+    border-bottom-left-radius: 20px;
+}
+.small-sphere{
+   border: 2px solid black;
+   border-bottom-color: #111;
+    
+}
+.big-sphere p{
+   
 }
