--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ header ul li:hover {
     padding: 15px 30px;
 }
 
-.menu-heading{
+.heading{
     border-radius: 30px;
         background:#333;
         color: #fff;
@@ -135,7 +135,8 @@ header ul li:hover {
 .menu{
     background-color: #FFE4B5;    /*BG COLOR*/
     border-radius: 20px;
-    
+    height: 160vh;
+   
 }
 .menu-content{
     display: flex;
@@ -337,27 +338,29 @@ transition: .2s;
   transition: .2s linear;
 }
 
-.child-img img:nth-child(1){
-    margin-bottom: -35px;
-    max-width: 15%;
-   /*  margin-left: 10px; */
-}
-.child-img img:nth-child(3){
-    margin-bottom: -52px;
-    max-width: 28%;
-     margin-left: -50px; 
-}
+
 
  .child-img img
  {
-    display: none;
-    max-width: 31%;
-   /*  margin-left: -30px; */
     
- }
-
+position: absolute;
+    display: none; 
+   /*   max-width: 53%; */
+    
+    
+ }                                                     /*Was here*/     
+#b1{
+   width: 33%;
+ margin-left: 12%;
+}
+#b2{
+   top:  15px;
+    width: 62%;
+   margin-right: -20%;
+}
 
  .parent-image img{
+   margin-top: 10px;
     z-index: 1;
     margin-left: 30px;
  }
@@ -380,6 +383,7 @@ transition: .2s;
 }
 
 .parent-image {
+   
     position: relative;
 }
 .parent-image button:hover{
@@ -437,6 +441,7 @@ transition: .2s;
 }
 
 .top-burgers-parent {
+    margin-left: -40px;
     flex: 1; /* Make top-burgers-parent flexible */
     margin-right: 20px; /* Add some spacing between the two elements */
 }
@@ -774,11 +779,192 @@ margin-top: 10px;
 
 /*top drinks*/
 .top-drinks{
-  margin-left: -35%;
-  margin-right: 70%;
+    margin-top: 7%;
+  margin-left: -30%;
+  margin-right: 60%;
+
 
 }
+.parent-image-drinks{
+position: relative;}
 .parent-image-drinks img{
-  min-width: 200%;
-    min-height: 500%;
+    cursor: pointer;
+    position: relative;
+  min-width: 100%;
+    min-height: 100%;
+}
+.parent-image-drinks img:hover {
+    animation: shake 0.5s ease-in-out;
+}
+
+@keyframes shake {
+    0% { transform: translateX(0); }
+    20% { transform: translateX(-5px); }
+    40% { transform: translateX(5px); }
+    60% { transform: translateX(-5px); }
+    80% { transform: translateX(5px); }
+    100% { transform: translateX(0); }
+}
+
+/* .child-img-drinks img{
+    margin-bottom: -20%;
+    display: none;
+    
+    animation: slideLeft 1s ease-in-out forwards;
+}
+@keyframes slideLeft {
+    from {
+        right: -100%;
+    }
+    to {
+        right: 100; 
+    }
+} */
+.child-img-drinks img {
+    margin-bottom: -20%;
+    display: none;
+   position: relative;
+    right: 0; /* Start from the right edge */
+    animation: slideLeft 1s ease-in-out forwards;
+}
+
+@keyframes slideLeft {
+    from {
+        right: -100%; /* Start position, fully off-screen */
+    }
+    to {
+        right: 0; /* End position, fully visible */
+    }
+}
+#drink1{
+    max-width: 50%;
+}
+#drink2{
+    max-width: 45%;
+}
+
+/* Modal */
+.Pmodal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+  
+  }
+  
+  /* Modal Content */
+  .payment-modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    
+    border-radius: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+  }
+  .payment-modal-content img{
+    width: 10%;
+    height: 10%;
+  }
+  
+  /* Close Button */
+  .payment-modal-close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .payment-modal-close:hover,
+  .payment-modal-close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .page3{
+    border-radius: 2%;
+    border: 1px solid black;
+    height: 100vh;
+    background-color: #FFE4B5;
+   display: flex;
+   flex-direction: row;
+  }
+
+  
+  
+  #aboutusHeading{
+    margin-top: 40px;
+  }
+  .aboutUs img{
+  width: 200%;
+ margin-left: 100%;
+ transition: left 2s linear;
+  }
+  .aboutUsText{
+    transition: left 0.2s linear;
+    position: relative;
+    top: 15%;
+    /* left: -15%; */
+    left: 12%;
+    align-items: center;
+  }
+  .aboutUsText p{
+    font-family: "Jacquard 24", system-ui;
+    font-weight: 600;
+    font-style:oblique;
+    font-size: 140%;
+  }
+  .author{
+    position: relative;
+    left: 450px;
+    font-family: "Jacquard 24", system-ui;
+    font-weight: 600;
+    font-style:oblique;
+    font-size: 140%;
+    top: 10px;
+  }
+  .map h3{
+    position: relative;
+    right: -300%;
+  }
+.map h3 span {
+    display: flex;
+    position: relative;
+   
+}
+.map h3 span:hover{
+    cursor: pointer;
+    font-size: 130%;
+    transition: .2s linear;
+}
+.map h3 span p:nth-child(1) {
+    color: red;
+}
+
+.map h3 span p:nth-child(2) {
+    color: green;
+}
+.map h3 span p:nth-child(3) {
+    color: blue;
+
+}
+.map h3 span p:nth-child(4) {
+    color:rgb(0, 225, 255);
+}
+
+.map iframe{
+    position: relative;
+left: 220%;
+height: 60%;
+width: 170%;
 }
