--- a/test.css
+++ b/test.css
@@ -760,94 +760,135 @@ header ul li:hover {
 /*POP UP*/
 
 .modal {
-    display: none;
+   /*  display: none; */
     position: fixed;
     z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%; /* Changed from 200% to 100% for proper viewport coverage */
+    height: 200%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
-  }
-  
 
-  .modal-content {
-    margin: 12% auto; /* Centered horizontally */
+}
+
+.modal-content {
+
+    margin: 12% 33%;
     padding: 20px;
-    width: 30%; /* Increased width for better form display */
-    max-width: 500px; /* Ensuring it doesn't get too wide on large screens */
-    background-color: #fff; /* Added background for better readability */
-    border-radius: 8px; /* Optional rounded corners */
-    font-family: cursive;
-    position: relative; /* Ensure close button is positioned correctly */
+
+    width: 20%;
+    height: 17%;
     transition: .5s ease-in-out;
-  }
-  
-  .man img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .close {
-    position: absolute; /* Changed to absolute for correct positioning */
-    top: 10px; /* Positioned close to the top-right corner */
-    right: 10px;
+    /*  border: 7px solid #0D99FF; */
+
+    font-family: cursive;
+
+}
+
+.man img {
+    position: absolute;
+    z-index: 0;
+}
+
+
+.close {
+    position: relative;
     color: #aaa;
+    margin-left: 70%;
     font-size: 28px;
     font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
+
+}
+
+.close:hover,
+.close:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
-  }
-  
-  .inputdata {
-    text-align: center; /* Center-align input data for better UX */
-  }
-  
-  .inputdata h2 {
-    color: #000; /* Changed to black for better readability */
-  }
-  
-  .modal-content input {
+}
+
+.bi-person-circle {
+    margin-top: -10px;
+    display: flex;
+    font-size: 2em;
+   
+    margin-bottom: 10px;
+}
+
+.bi-person-circle p {
+    margin-top: 35px;
+    position: absolute;
+    display: flex;
+    font-size: 20px;
+}
+
+
+.modal-content input {
     font-family: cursive;
     outline: none;
-    border: 2px solid #e68231;
-    margin: 15px auto; /* Center-aligned and spaced inputs */
+    border: 3px solid #ffffff;
+    border-top: #e68231;
+    border-right: #e68231;
+    border-left: #111;
+    margin-left: 60px;
     display: block;
-    padding: 10px;
-    font-size: 16px;
-    width: 80%;
-    background-color: #f9f9f9; /* Added background for better UX */
-    border-radius: 4px;
-  }
-  
-  #submitBtn {
+    color: #fff;
+    margin-top: 35px;
+    font-size: 20px;
+    width: 55%;
+    background-color: #33333300;
+
+}
+
+.inputdata {
+    margin-top: 5%;
+    margin-left: 10%;
+    position: absolute;
+
+
+}
+
+.inputdata h2 {
+    margin-top: -8%;
+    margin-left: 28%;
+    color: #fff;
+}
+
+#submitBtn {
     font-family: cursive;
-    margin: 20px auto; /* Center-aligned and spaced button */
-    display: block;
+    margin-left: 30%;
+    margin-top: 17%;
     font-size: 20px;
     cursor: pointer;
-    border: none; /* Removed default button borders */
-    padding: 10px 20px;
-    border-radius: 4px;
-    background-color: #0D99FF; /* Button background */
-    color: white; /* Button text color */
-  }
-  
-  #submitBtn:hover {
-    background-color: #006bb3; /* Darker background on hover */
-  }
-  
-  .hidden {
+    border-radius: 15%;
+}
+
+#submitBtn:hover {
+    color: #fff;
+    background-color: #0D99FF;
+    transition: .3s ease-in;
+}
+
+.bi-person-circle p {
+    margin-left: -35px;
+}
+
+.hidden {
     display: none;
-  }
-  
+}
+
+.user:hover {
+    transition: none;
+    box-shadow: none;
+}
+
+.user-details {
+    margin-left: -10%;
+    max-width: 100%;
+
+}
+
 .user-details p {
     font-family: sans-serif;
     font-weight: bolder;
@@ -977,12 +1018,12 @@ header ul li:hover {
 
 /* Modal */
 .Pmodal {
-   
+    display: none;
     position: fixed;
     z-index: 1;
     left: 0;
     top: 0;
-    width: 150%;
+    width: 100%;
     height: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
@@ -991,89 +1032,34 @@ header ul li:hover {
 
 /* Modal Content */
 .payment-modal-content {
-    align-items: center;
-
-   width: 50%;
-    height: 50%;
+    background-color: #fefefe;
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-display: flex;
+
     border-radius: 10px;
     position: absolute;
-    top: 5%;
-    left: 35%;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
 
 }
 
-/* .payment-modal-content img {
+.payment-modal-content img {
     width: 10%;
     height: 10%;
-} */
-
-.payment-modal-content input {
-  /*  display: none; */                                                         /*was here*/
-}
-.payment-modal-buttons{
-    
-    width: 40%;
-    margin-left: 20%;
-    flex-direction: column;
-}
-.payment-modal-buttons button{
-    margin-bottom: 30px;
-    background: #868585;
-    color: #ffffff;
-    border: none;
-    border-radius: 10px;
-    padding: 20px 10px;
-    font-size: 100%;
-    width: 45%;
-    cursor: pointer;
-    transition: background 0.3s ease, transform 0.2s;
-
 }
 
-
- .pay-with-qr-container button{
-     background: #FFA500;
- }
- .payment-modal-buttons button:hover {
-     background: rgb(238, 190, 102);
-     transform: translateY(-2px);
- }
-
-
-.qr-container img{
-    width: 150%;
-    
-}
-#chef-img-Pmodal{
-    position: relative;
- left: 40%;
- top: 22%;
-}
 /* Close Button */
 .payment-modal-close {
-    
-    top: -50%;
-    left: 90%;
-    position: relative;
     color: #aaa;
     float: right;
-    font-size: 38px;
+    font-size: 28px;
     font-weight: bold;
 }
- 
-.payment-modal-content span:hover{
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-#payment-modal-close-button:hover,
-#payment-modal-close-button:focus {
-    
+
+.payment-modal-close:hover,
+.payment-modal-close:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
@@ -1282,9 +1268,6 @@ width: 170%;
     margin-top: 10%;
 }
 .simp-os-div-two-two{
-   /*   display: none;  */
-}
-.resp-os-div-two-two{
     display: none;
 }
 
@@ -1801,7 +1784,6 @@ width: 170%;
     touch-action: manipulation;
 } */
 
-
 @media only screen and (max-width:600px){
     *{
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -2084,8 +2066,7 @@ margin-left: 0%;
         flex-direction: column;
     }
     .resp-os-div-two-two{
-       /*  display: flex; */
-       display: none;
+        display: flex;
     }
     .os-div-two-two img {
         height: 60vw;
@@ -2181,21 +2162,9 @@ margin-left: 0%;
        
     }
     .container img {
-     
+      
        margin-top: -100%;
         max-width: 100vw;
     }
-  
-    .modal-content {
-        margin-top: -90px;
-        background-color:#00000000;
-        width: 70vw;
-        height: 40vh;
-       color: #006bb3;
-    }
-    .close{
-        margin-top: 110%;
-    }
-   
 }
 
