--- a/styles.css
+++ b/styles.css
@@ -988,6 +988,9 @@ header ul li:hover {
     background-color: rgba(0, 0, 0, 0.4);
 
 }
+#payment-modal{
+    display: none;
+}
 
 /* Modal Content */
 .payment-modal-content {
@@ -1013,7 +1016,7 @@ display: flex;
 } */
 
 .payment-modal-content input {
-  /*  display: none; */                                                         /*was here*/
+    display: none;                                                         /*was here*/
 }
 .payment-modal-buttons{
     
@@ -1056,28 +1059,28 @@ display: flex;
 }
 /* Close Button */
 .payment-modal-close {
-    
-    top: -50%;
-    left: 90%;
-    position: relative;
-    color: #aaa;
-    float: right;
-    font-size: 38px;
-    font-weight: bold;
+    cursor: pointer;
+    top: -10%;
+    left: 100%;
+    position: absolute;
+    font-size: 200%;
+   
 }
- 
+.payment-modal-close:hover {
+    color: #000;
+}
 .payment-modal-content span:hover{
     color: black;
     text-decoration: none;
     cursor: pointer;
 }
-#payment-modal-close-button:hover,
-#payment-modal-close-button:focus {
+/* .payment-modal-close-button:hover,
+.payment-modal-close-button:focus {
     
     color: black;
     text-decoration: none;
     cursor: pointer;
-}
+} */
 
 .page3 {
     border-radius: 2%;
@@ -2196,6 +2199,30 @@ margin-left: 0%;
     .close{
         margin-top: 110%;
     }
+    .qr-container img{
+       display: none;
+        
+    }
+    .payment-modal-buttons button{
+        padding: 20px 10px;  
+        width: 100%;
+    }
+    .payment-modal-content {
+        top: 40%;
+    }
+    .payment-modal-close {
+    
+        top: -80%;
+        left: 90%;
+        position: relative;
+        color: #aaa;
+        float: right;
+        font-size: 38px;
+        font-weight: bold;
+    }
+    #chef-img-Pmodal{
+        display: none;
+        }
    
 }
 
